hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__const@llvm21.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal ptr @_hl.main.1() !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call ptr @__rt__list__new(i64 3, i64 ptrtoint (ptr getelementptr (i64, ptr null, i32 1) to i64), i64 8, ptr null)
  %1 = alloca i64, align 8
  store i64 1, ptr %1, align 4
  call void @__rt__list__push(ptr %0, ptr %1)
  %2 = alloca i64, align 8
  store i64 2, ptr %2, align 4
  call void @__rt__list__push(ptr %0, ptr %2)
  %3 = alloca i64, align 8
  store i64 3, ptr %3, align 4
  call void @__rt__list__push(ptr %0, ptr %3)
  ret ptr %0
}

declare ptr @__rt__list__new(i64, i64, i64, ptr)

declare void @__rt__list__push(ptr, ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/PNzlVLClAphFGIyrhvZsHeD")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25761, type: !5, scopeLine: 25762, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7}
!7 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
