hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__get@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i1, i16 } @_hl.main.1(ptr %0, i64 %1) !dbg !3 {
alloca_block:
  %"0" = alloca { i1, i16 }, align 8
  %"2_0" = alloca ptr, align 8
  %"2_1" = alloca i64, align 8
  %"4_0" = alloca { i1, i16 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  store i64 %1, ptr %"2_1", align 4
  %"2_01" = load ptr, ptr %"2_0", align 8
  %"2_12" = load i64, ptr %"2_1", align 4
  %2 = alloca i16, align 2, !dbg !13
  %3 = call i1 @__rt__list__get(ptr %"2_01", i64 %"2_12", ptr %2), !dbg !13
  %4 = load i16, ptr %2, align 2, !dbg !13
  %5 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %4, 1, !dbg !13
  %6 = select i1 %3, { i1, i16 } %5, { i1, i16 } { i1 false, i16 poison }, !dbg !13
  store { i1, i16 } %6, ptr %"4_0", align 2, !dbg !13
  %"4_03" = load { i1, i16 }, ptr %"4_0", align 2
  store { i1, i16 } %"4_03", ptr %"0", align 2
  %"04" = load { i1, i16 }, ptr %"0", align 2
  ret { i1, i16 } %"04"
}

declare i1 @__rt__list__get(ptr, i64, ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "/hvZsHeDgUnyeIVwAutKJHaZEPSZ/PXPeycUvnujGxZKPRCTcNfsTEGLoP/CKHhM/mzeCBZoPGeHBxpWCFCAIgmDOGX/yQmUZGJneRvyjSLkxZjvaVMrckAfo/SeQfNL")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 26394, type: !5, scopeLine: 26395, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/JrSnVYeXFfvzCkHdtWCCnkJ/PKiWSKICgZuRNRvRJmbrf/qoqpIlPNzlVLC.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !11, !12}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i1, i16 }", file: !2, size: 2, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!10 = !DIBasicType(name: "i16", size: 16, encoding: DW_ATE_unsigned)
!11 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!12 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!13 = !DILocation(line: 5299, column: 65, scope: !3)
