hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__insert@llvm21.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { ptr, { i1, i16 } } @_hl.main.1(ptr %0, i64 %1, i16 %2) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %3 = alloca i16, align 2
  store i16 %2, ptr %3, align 2
  %4 = call i1 @__rt__list__insert(ptr %0, i64 %1, ptr %3)
  %5 = insertvalue { i1, i16 } { i1 false, i16 poison }, i16 %2, 1
  %6 = select i1 %4, { i1, i16 } { i1 true, i16 poison }, { i1, i16 } %5
  %mrv = insertvalue { ptr, { i1, i16 } } poison, ptr %0, 0
  %mrv8 = insertvalue { ptr, { i1, i16 } } %mrv, { i1, i16 } %6, 1
  ret { ptr, { i1, i16 } } %mrv8
}

declare i1 @__rt__list__insert(ptr, i64, ptr)
